force-app/main/default/objects/BinSummary__c/BinSummary__c.object-meta.xml
<CustomObject>
    <label>Bin Summary</label>
    <nameField>
        <displayFormat>SBS-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bin Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>