force-app/main/default/objects/BinSummary__c/fields/BinExcess__c.field-meta.xml
<CustomField>
    <fullName>BinExcess__c</fullName>
    <formula>MAX(BinMatched__c + BinUnmatched__c - Waypoints__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bin Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>