force-app/main/default/objects/BinSummary__c/fields/BinMatched__c.field-meta.xml
<CustomField>
    <fullName>BinMatched__c</fullName>
    <label>Bin Matched</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>