force-app/main/default/objects/BinSummary__c/fields/BinUnmatched__c.field-meta.xml
<CustomField>
    <fullName>BinUnmatched__c</fullName>
    <label>Bin Unmatched</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>