force-app/main/default/objects/BinSummary__c/fields/BinUnmatchedOverweight__c.field-meta.xml
<CustomField>
    <fullName>BinUnmatchedOverweight__c</fullName>
    <label>Bin Unmatched Overweight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>