force-app/main/default/objects/BinSummary__c/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <label>Category Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>