force-app/main/default/objects/BinSummary__c/fields/Excess__c.field-meta.xml
<CustomField>
    <fullName>Excess__c</fullName>
    <formula>MAX(Matched__c + Unmatched__c - Waypoints__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>