force-app/main/default/objects/BinSummary__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>DATEVALUE(CreatedDate) &lt; TODAY() - 366</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled For Deletion</label>
    <type>Checkbox</type>
</CustomField>