force-app/main/default/objects/BinSummary__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bin Summaries</relationshipLabel>
    <relationshipName>BinSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>