force-app/main/default/objects/BinSummary__c/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <label>Matched</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>