force-app/main/default/objects/BinSummary__c/fields/OrderProducts__c.field-meta.xml
<CustomField>
    <fullName>OrderProducts__c</fullName>
    <label>Order Products</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>