force-app/main/default/objects/BinSummary__c/fields/Unmatched__c.field-meta.xml
<CustomField>
    <fullName>Unmatched__c</fullName>
    <label>Unmatched</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>