force-app/main/default/objects/BinSummary__c/fields/UnmatchedOverweight__c.field-meta.xml
<CustomField>
    <fullName>UnmatchedOverweight__c</fullName>
    <label>Unmatched Overweight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>