force-app/main/default/objects/BinSummary__c/fields/Waypoints__c.field-meta.xml
<CustomField>
    <fullName>Waypoints__c</fullName>
    <label>Waypoints</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>