force-app/main/default/objects/BinSummary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Waypoints__c</columns>
    <columns>OrderProducts__c</columns>
    <columns>Matched__c</columns>
    <columns>Unmatched__c</columns>
    <columns>Excess__c</columns>
    <columns>UnmatchedOverweight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>